--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -5,8 +5,13 @@
     &__block {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         gap: 20px;
         margin-top: 25px;
+
+        @include mobile {
+            flex-direction: column;
+        }
     }
 
     &__card {
@@ -87,10 +92,17 @@
     &__steam {
         display: flex;
         align-items: center;
+        width: 40%;
+        max-width: 410px;
+
+        @include mobile {
+            width: 100%;
+            max-width: 100%;
+        }
 
         &_img {
             width: 100%;
-            min-width: 170px;
+            max-width: 170px;
             height: 100%;
             display: flex;
             position: relative;
@@ -126,12 +138,17 @@
     &__gamegift {
         text-align: center;
         max-width: 510px;
-        width: 100%;
+        width: 40%;
         padding: 0;
         display: flex;
         align-items: center;
         flex-direction: column;
         justify-content: center;
+
+        @include mobile {
+            width: 100%;
+            max-width: 100%;
+        }
 
         &_title {
             padding: 20px 20px 10px;
@@ -141,7 +158,7 @@
     }
 
     &__topup {
-        width: 100%;
+        width: 40%;
         max-width: 300px;
         border-radius: 20px;
         border: 1px solid #55473E;
@@ -149,6 +166,11 @@
         box-shadow: 0px 4px 70.6px 0px rgba(0, 0, 0, 0.25);
         padding: 8px;
         position: relative;
+
+        @include mobile {
+            width: 100%;
+            max-width: 100%;
+        }
 
         &_volume {
             position: absolute;
@@ -208,6 +230,14 @@
         border-radius: 20px;
         overflow: hidden;
         background: linear-gradient(30deg, rgba(255, 108, 61, 0.00) 88.9%, rgba(255, 108, 61, 0.19) 101.47%), #161513;
+
+        @include mobile {
+            flex-direction: column;
+            gap: 5px;
+            background: linear-gradient(120deg, rgba(255, 108, 61, 0.00) 88.9%, rgba(255, 108, 61, 0.19) 101.47%), #161513;
+        }
+
+
     }
 
     &__img {
@@ -226,12 +256,22 @@
             max-width: 570px;
             height: 100%;
             background: linear-gradient(90deg, rgba(0, 0, 0, 0.00) 0%, #161513 100%);
+
+            @include mobile {
+                display: none;
+            }
         }
 
         &_item {
             width: 150%;
             max-width: 550px;
             object-fit: cover;
+
+            @include mobile {
+                width: 100%;
+                height: 134px;
+                border-radius: 10px;
+            }
         }
     }
 
@@ -243,6 +283,10 @@
         display: flex;
         flex-direction: column;
         gap: 12px;
+
+        @include mobile {
+            padding: 10px;
+        }
     }
 
     &__action {
@@ -264,12 +308,22 @@
             font-size: 24px;
             font-weight: bold;
         }
+
+        @include mobile {
+            justify-content: space-between;
+            gap: 10px;
+        }
     }
 
     &__info {
         display: flex;
         align-items: center;
         gap: 20px;
+
+        @include mobile {
+            flex-wrap: wrap;
+            gap: 5px 20px;
+        }
 
         &_item {
             display: flex;
@@ -295,6 +349,10 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
+
+        @include mobile {
+            -webkit-line-clamp: 3;
+        }
     }
 
     &__price {
@@ -315,6 +373,11 @@
 
     .splide__pagination {
         left: inherit;
+
+        @include mobile {
+            left: 0;
+            right: inherit;
+        }
     }
 
     .splide__pagination__page {
@@ -370,6 +433,9 @@
         line-height: 1;
         margin-top: 20px;
         opacity: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
     }
 
     &__title {
@@ -391,6 +457,10 @@
         position: relative;
         max-width: 180px;
         color: white;
+
+        @include mobile {
+            max-width: 220px;
+        }
 
         .topup-slider__item {
             width: 82px;
@@ -587,6 +657,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        flex-wrap: wrap;
         gap: 30px;
         margin-bottom: 10px;
 
