--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -317,194 +317,6 @@
 
 }
 
-.game-card {
-    width: 100%;
-    max-width: 100%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transition: 300ms ease;
-
-    &__img {
-        width: 100%;
-        height: 320px;
-        object-fit: cover;
-        border-bottom: 1px solid rgb(132, 127, 125);
-        border-radius: 10px;
-        transition: 300ms ease;
-
-        @include mobile {
-            height: 220px;
-        }
-    }
-
-    &__content {
-        position: absolute;
-        bottom: 80px;
-        left: 50%;
-        width: calc(100% - 28px);
-        padding: 12px 8px;
-        transform: translateX(-50%);
-        border-radius: 4px;
-        backdrop-filter: blur(11.4px);
-        background: linear-gradient(180.00deg, rgba(44, 44, 44, 0.62), rgba(0, 0, 0, 0.36) 100%);
-
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-
-        @include mobile {
-            width: calc(100% - 18px);
-            gap: 5px;
-            padding: 6px;
-            bottom: 70px;
-        }
-    }
-
-    &__title {
-        width: calc(100% - 20px);
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.2;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        height: 39px;
-
-        @include mobile {
-            width: calc(100% - 10px);
-            font-size: 10px;
-            height: auto;
-        }
-    }
-
-    &__subtitle {
-        font-size: 10px;
-        width: calc(100% - 40px);
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        height: max-content;
-
-        @include mobile {
-            width: calc(100% - 20px);
-            font-size: 7px;
-        }
-    }
-
-    &__label {
-        width: 13px;
-        height: 13px;
-        display: flex;
-        position: absolute;
-        right: 8px;
-        top: 8px;
-
-        @include mobile {
-            width: 9px;
-            height: 9px;
-        }
-    }
-
-    &__discount {
-        position: absolute;
-        bottom: 13px;
-        right: 0;
-        font-size: 12px;
-        font-weight: 700;
-        padding: 2px 4px;
-        border-radius: 6px 0px 0px 6px;
-        background: rgb(113, 118, 255);
-
-        @include mobile {
-            font-size: 8px;
-        }
-    }
-
-    &__price {
-        font-size: 24px;
-        font-weight: 700;
-
-        @include mobile {
-            font-size: 16px;
-        }
-
-        &_cur {
-            font-size: 13px;
-            color: #83AC74;
-            font-weight: 500;
-            position: relative;
-            top: -15px;
-            margin-left: 2px;
-
-            @include mobile {
-                font-size: 10px;
-                top: -10px;
-            }
-        }
-
-        &_old {
-            text-decoration-line: line-through;
-            font-size: 16px;
-            font-style: italic;
-            margin-left: 8px;
-            margin-bottom: 2px;
-            color: $text-dark;
-
-            @include mobile {
-                font-size: 10px;
-            }
-        }
-    }
-
-    &__btn {
-        transition: 300ms ease;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        bottom: 23px;
-        transform: skew(-15deg);
-        border-radius: 4px;
-        color: white;
-        background: rgb(132, 127, 125);
-        padding: 1px;
-        overflow: hidden;
-
-        &_block {
-            display: flex;
-            align-items: flex-end;
-            justify-content: center;
-            line-height: 1;
-
-            background: rgb(31, 28, 26);
-            padding: 0.5rem 1rem;
-            min-width: 50%;
-            border-radius: 4px;
-
-            >span {
-                transform: skew(15deg);
-            }
-        }
-
-    }
-
-    &:hover {
-        .game-card__img {
-            border-color: $orange;
-        }
-
-        .game-card__btn {
-            background: linear-gradient(to right, #F3B454, #F36754);
-        }
-    }
-}
-
 .statics-card {
     position: relative;
     overflow: hidden;
@@ -1020,6 +832,11 @@
         display: flex;
         gap: 20px;
         align-items: center;
+
+        @include mobile {
+            width: 100%;
+            justify-content: space-between;
+        }
     }
 
     &-link {
@@ -1416,4 +1233,226 @@
 
 .is-overflow {
     overflow: visible;
+}
+
+.pre-order {
+    padding-top: 40px;
+    padding-bottom: 40px;
+
+    &._vpn {
+        padding-bottom: 120px;
+        border-bottom: 1px solid #121110;
+    }
+
+    &__block {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+
+        @include netbook {
+            flex-direction: column;
+        }
+    }
+
+    &__time {
+        position: relative;
+        width: 100%;
+        max-width: 509px;
+        border-radius: 20px;
+        overflow: hidden;
+
+        @include netbook {
+            max-width: 100%;
+        }
+
+        @include mobile {
+            height: 460px;
+        }
+
+        &_bg {
+            position: relative;
+            height: 100%;
+        }
+
+        &_overlay {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(28, 27, 25, 0.91) 66.5%);
+        }
+
+        &_block {
+            position: absolute;
+            z-index: 2;
+            top: 0;
+            left: 0;
+            padding: 28px;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            height: 100%;
+            width: 100%;
+        }
+
+        &_img {
+            height: 100%;
+            object-fit: cover;
+        }
+
+        &_pretitle {
+            font-size: 14px;
+            line-height: 1;
+            margin-bottom: 5px;
+        }
+
+        &_title {
+            font-size: 32px;
+            font-weight: 600;
+            line-height: 1.3;
+            margin-bottom: 5px;
+        }
+
+        &_subtitle {
+            font-size: 14px;
+            color: $text-dark;
+            line-height: 1;
+        }
+
+        &_pretitle {
+            font-size: 14px;
+        }
+    }
+
+    &__contact {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    &__card {
+        border-radius: 20px;
+        background: linear-gradient(91deg, rgba(51, 50, 49, 0.35) 0%, rgba(79, 79, 79, 0.17) 63.74%, rgba(79, 79, 79, 0.35) 101.17%);
+        padding: 30px 40px;
+        height: 100%;
+
+        @include mobile {
+            padding: 30px 20px;
+        }
+
+        &_title {
+            font-size: 36px;
+            font-weight: 700;
+            margin-bottom: 8px;
+            line-height: 1.1;
+
+            @include mobile {
+                margin-bottom: 15px;
+            }
+        }
+
+        &_text {
+            color: $text-dark;
+        }
+
+        &_block {
+            display: flex;
+            align-items: center;
+            gap: 40px;
+
+            @include mobile {
+                flex-direction: column;
+                text-align: center;
+            }
+        }
+
+        &_contact {
+            width: 150px;
+            display: flex;
+            gap: 30px;
+        }
+
+        &_link {
+            width: 58px;
+            position: relative;
+
+            &_bg {}
+
+            &_icon {
+                width: 30px;
+                height: 30px;
+                display: flex;
+                position: absolute;
+                top: 55%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+
+            &:hover {
+                .pre-order__card_link_bg {
+                    filter: brightness(0) saturate(100%) invert(46%) sepia(78%) saturate(646%) hue-rotate(329deg) brightness(102%) contrast(100%);
+                }
+            }
+        }
+    }
+
+    &__card_2 {
+        @include mobile {
+            text-align: center;
+        }
+    }
+
+    &__btn {
+        padding: 20px;
+        border-radius: 14.5px;
+        font-weight: 500;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        max-width: 270px;
+
+        @include mobile {
+            margin: 0 auto;
+        }
+    }
+
+    &__subs {
+        display: flex;
+        align-items: center;
+        margin-top: 18px;
+        position: relative;
+
+        @include mobile {
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        &_input {
+            background: transparent;
+            border-radius: 10px;
+            border: 1px solid $text-dark;
+        }
+
+        &_btn {
+            position: absolute;
+            top: 4px;
+            right: 4px;
+            height: 38px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            @include mobile {
+                width: 100%;
+                position: relative;
+                top: inherit;
+                right: inherit;
+            }
+        }
+    }
 }
