--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -5,7 +5,6 @@
     &__block {
         display: flex;
         justify-content: space-between;
-        flex-wrap: wrap;
         gap: 20px;
         margin-top: 25px;
 
@@ -247,6 +246,10 @@
         border-bottom: 1px solid #2C2C2A;
         display: flex;
         position: relative;
+
+        @include mobile {
+            max-width: 100%;
+        }
 
         &_over {
             position: absolute;
@@ -945,6 +948,10 @@
         width: 60%;
         border-radius: 15px;
 
+        @include netbook {
+            width: 100%;
+        }
+
         @include mobile {
             width: 100%;
         }
@@ -1059,24 +1066,32 @@
     padding: 12px;
     transition: 200ms ease;
 
+    @include netbook {
+        width: 100%;
+        max-width: 612px;
+    }
 
     @include mobile {
         padding: 5px 12px 5px 0;
-        min-height: 250px;
+        min-height: 200px;
+        max-height: 300px;
+        height: 100%;
+        max-width: 100%;
     }
 
     &__block {
         height: 100%;
         position: relative;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
+        display: flex;
         gap: 12px;
     }
 
     &__img {
         width: 100%;
+        max-width: 50%;
         height: 100%;
         border-radius: 15px;
+        object-fit: cover;
 
         &_bg {
             position: absolute;
@@ -1114,7 +1129,7 @@
         font-size: 24px;
         line-height: 1.2;
 
-        @include netbook {
+        @include mobile {
             font-size: 16px;
         }
     }
@@ -1127,7 +1142,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
 
-        @include netbook {
+        @include mobile {
             font-size: 12px;
         }
     }
@@ -1144,7 +1159,7 @@
         font-size: 15px;
         font-weight: 400;
 
-        @include netbook {
+        @include mobile {
             font-size: 12px;
         }
     }
@@ -1166,6 +1181,13 @@
 
         .home-blog-card__img_bg {
             filter: contrast(1) opacity(0.1) brightness(0.1) grayscale(1);
+        }
+    }
+
+    .splide__slide {
+        @include mobile {
+            display: flex;
+            justify-content: center;
         }
     }
 }
