--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -321,7 +321,7 @@
     position: relative;
     overflow: hidden;
     display: flex;
-    height: 124px;
+    height: 100px;
     border-radius: 10px;
     border: 1px solid #33302D;
 
@@ -345,13 +345,14 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+        height: 100%;
         gap: 0;
-        padding: 30px;
         background: linear-gradient(175.53deg, rgba(52, 45, 39, 0.35), rgba(34, 34, 32, 0.35) 67.445%);
     }
 
     &__number {
-        font-size: 48px;
+        font-size: 40px;
         font-weight: 700;
         line-height: 1;
         font-family: $font-rubik;
@@ -391,7 +392,7 @@
 
     &__text {
         font-family: $font-rubik;
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 300;
         color: rgb(255, 108, 61);
         position: relative;
