--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -91,8 +91,11 @@
     &__steam {
         display: flex;
         align-items: center;
+        justify-content: center;
         width: 40%;
         max-width: 410px;
+
+        @include netbook {}
 
         @include mobile {
             width: 100%;
@@ -271,6 +274,7 @@
             object-fit: cover;
 
             @include mobile {
+                max-width: 100%;
                 width: 100%;
                 height: 134px;
                 border-radius: 10px;
@@ -743,7 +747,7 @@
 
 /* Loop Block */
 .home-statics {
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     background: rgb(26, 25, 23);
 
     .statics-card {
@@ -762,7 +766,7 @@
                     rgb(34, 34, 32) 67.445%) padding-box,
                 linear-gradient(to top, #ffffff1a 4%, #FF6C3D) border-box;
             border: 1px solid transparent;
-            transform: scale(1.15);
+            transform: scale(1.20);
 
             @include mobile {
                 transform: scale(0.95);
@@ -779,6 +783,10 @@
         overflow: visible;
         position: relative;
         z-index: 2;
+    }
+
+    .home-loop-block__title {
+        margin-bottom: 0;
     }
 }
 
