--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -532,7 +532,7 @@
                 bottom: -101%;
                 left: 0;
                 width: 100%;
-                height: 70vh;
+                height: auto;
                 background-color: darken($color: #1C1B19, $amount: 5);
                 z-index: 12;
                 overflow: auto;
@@ -866,21 +866,21 @@
 .breadcrumb {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 5px;
     color: $text-dark;
 
     &-item {
+        font-size: 12px;
+
         &::after {
             content: "/";
             display: inline-block;
-            margin-left: 8px;
+            margin-left: 5px;
         }
 
         &:last-child::after {
             display: none;
         }
-
-        font-size: 12px;
 
         a {
             color: $text-dark;
@@ -889,6 +889,10 @@
             &:hover {
                 color: $orange;
             }
+        }
+
+        &.active {
+            color: white;
         }
     }
 }
