--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -1,3 +1,29 @@
+.cart-bg-img {
+    width: 100%;
+    height: 1000px;
+    filter: blur(12.100000381469727px);
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+
+    &__blur {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 1000px;
+        background: linear-gradient(180deg, rgba(28, 27, 25, 0.00) 0%, #1C1B19 100%);
+    }
+
+    &__item {
+        position: absolute;
+        z-index: -2;
+        height: 1000px;
+        filter: brightness(0.3) blur(12.100000381469727px);
+    }
+}
+
 .catalog-list-cart {
     margin-top: 40px;
 
@@ -372,7 +398,7 @@
     left: 50%;
     transform: translateX(-50%);
     z-index: 20;
-    top: 110px;
+    top: 70px;
     width: 100%;
     opacity: 0;
     visibility: hidden;
@@ -474,9 +500,14 @@
         border: 1px solid #34312D;
         border-radius: 3px;
         background-color: #22211E;
+        transition: 200ms ease;
 
         &:nth-child(odd) {
             background-color: #1C1B19;
+        }
+
+        &:hover {
+            background-color: #2D2B28;
         }
     }
 
@@ -530,12 +561,9 @@
         }
     }
 
-
-
-    &__icon {
-        width: 45px;
-        height: 45px;
-        object-fit: contain;
+    svg {
+        width: revert-layer;
+        height: 38px;
     }
 
     &__content {
@@ -547,12 +575,14 @@
     &__title {
         font-size: 18px;
         line-height: 1;
+        transition: 300ms ease;
     }
 
     &__text {
         font-size: 12px;
         color: $text-dark;
         line-height: 1;
+        transition: 300ms ease;
     }
 
     &__item {
@@ -562,6 +592,7 @@
         gap: 10px;
         position: relative;
         padding-right: 20px;
+
 
         @include mobile {
             min-width: 280px;
@@ -588,8 +619,12 @@
         }
 
         &:hover {
-            .cart-advantages__icon {
-                filter: brightness(0) saturate(100%) invert(46%) sepia(78%) saturate(646%) hue-rotate(329deg) brightness(102%) contrast(100%);
+            svg path {
+                fill: white;
+            }
+
+            .cart-advantages__title {
+                color: $orange;
             }
 
             .cart-advantages__text {
@@ -605,17 +640,6 @@
 
     .container {
         position: relative;
-    }
-
-    &__circle {
-        position: absolute;
-        top: 100px;
-        left: -100px;
-        width: 300px;
-        height: 300px;
-        border-radius: 50%;
-        background: linear-gradient(90deg, rgba(135, 61, 37, 0.35) -0.35%, rgba(255, 108, 61, 0.35) 100%);
-        filter: blur(200px);
     }
 
     &__block {
@@ -798,16 +822,6 @@
         position: relative;
     }
 
-    &__circle {
-        position: absolute;
-        top: -200px;
-        right: 0;
-        width: 300px;
-        height: 300px;
-        border-radius: 50%;
-        background: linear-gradient(90deg, rgba(135, 61, 37, 0.35) -0.35%, rgba(255, 108, 61, 0.35) 100%);
-        filter: blur(250px);
-    }
 
     &__block {
         border-radius: 10px;
@@ -940,17 +954,6 @@
 
     .container {
         position: relative;
-    }
-
-    &__circle {
-        position: absolute;
-        top: -200px;
-        left: 0;
-        width: 300px;
-        height: 300px;
-        border-radius: 50%;
-        background: linear-gradient(90deg, rgba(135, 61, 37, 0.35) -0.35%, rgba(255, 108, 61, 0.35) 100%);
-        filter: blur(250px);
     }
 
     &__block {
