--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -3,6 +3,7 @@
 @import "libs/bootstrap/bootstrap-grid.scss";
 @import "libs/swiperjs";
 @import "libs/splide";
+@import "libs/fancybox";
 
 /* Main */
 /* Helpers */
