--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -129,6 +129,7 @@
         align-items: center;
         justify-content: space-between;
         border: 1px solid transparent;
+        transition: 200ms ease;
 
         &:hover {
             border: 1px solid $orange;
@@ -828,6 +829,7 @@
     border: 1px solid $text-dark;
     padding: 4px;
     border-radius: 10px;
+    width: max-content;
 
     &-list {
         display: flex;
