--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -47,7 +47,7 @@
         @include mobile {
             grid-template-columns: 1fr;
             grid-template-rows: auto;
-            gap: 10px;
+            gap: 15px;
         }
     }
 
@@ -67,7 +67,7 @@
             object-fit: cover;
 
             @include mobile {
-                height: 500px;
+                height: 400px;
             }
         }
 
@@ -341,6 +341,7 @@
             grid-column: auto;
             grid-row: auto;
             padding: 15px;
+            margin-top: 0;
         }
 
         &_title {
@@ -403,10 +404,6 @@
     opacity: 0;
     visibility: hidden;
     transition: 100ms ease;
-
-    @include mobile {
-        top: 105px;
-    }
 
     &.active {
         visibility: visible;
@@ -538,6 +535,12 @@
 .cart-advantages {
     margin-top: 20px;
 
+    .container{
+        @include mobile{
+            padding: 0;
+        }
+    }
+
     &__block {
         display: flex;
         align-items: center;
@@ -547,8 +550,9 @@
         background: #1A1917;
 
         @include mobile {
-            padding: 20px;
+            padding: 15px 10px;
             overflow-x: auto;
+            gap: 10px;
 
             &::-webkit-scrollbar {
                 display: none;
@@ -576,6 +580,10 @@
         font-size: 18px;
         line-height: 1;
         transition: 300ms ease;
+
+        @include mobile {
+            font-size: 14px;
+        }
     }
 
     &__text {
@@ -583,6 +591,10 @@
         color: $text-dark;
         line-height: 1;
         transition: 300ms ease;
+
+        @include mobile {
+            font-size: 10px;
+        }
     }
 
     &__item {
@@ -595,7 +607,7 @@
 
 
         @include mobile {
-            min-width: 280px;
+            min-width: 220px;
             padding-right: 10px;
         }
 
@@ -706,11 +718,17 @@
             position: absolute;
             right: 0;
             bottom: 0;
-            border-radius: 2.557px;
-            border: 0.639px solid #847F7D;
+            border: 1px solid transparent;
+            border-radius: 5px;
+            background: #282725;
             font-size: 10px;
             color: white;
             padding: 1px 8px;
+            transition: 300ms ease;
+
+            &:hover {
+                border-color: $orange;
+            }
         }
 
         &_modes,
@@ -727,7 +745,7 @@
             align-items: center;
             gap: 5px;
 
-            &_icon {
+            svg {
                 width: 12px;
                 height: 12px;
             }
@@ -735,6 +753,19 @@
             &_text {
                 font-size: 9px;
                 color: $text-dark;
+                transition: 300ms ease;
+            }
+
+            &:hover {
+                svg path {
+                    fill: $orange;
+                }
+
+                .cart-about__info_mode_text,
+                .cart-about__info_gamer_text {
+                    color: white;
+                }
+
             }
         }
     }
@@ -748,10 +779,11 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
-        height: auto;
+        height: 415px;
 
         @include mobile {
             max-width: 979px;
+            height: auto;
         }
 
         &_tabs {
@@ -765,7 +797,9 @@
             }
         }
 
-        &_content {}
+        &_content {
+            height: 100%;
+        }
 
         &_tab {
             display: none;
@@ -781,16 +815,61 @@
 
 .screen-swiper {
     width: 100%;
+    height: 340px;
     position: relative;
+
+    @include mobile {
+        flex-direction: column-reverse;
+        justify-content: flex-end;
+        height: auto;
+    }
+
+    .swiper {
+        width: 100%;
+    }
 
     &__slide {
         display: flex;
         border-radius: 3px;
         overflow: hidden;
+        position: relative;
         height: 100%;
+
+        @include mobile {
+            height: 150px;
+        }
 
         img {
             object-fit: cover;
+            height: 100%;
+        }
+
+        span {
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(0deg, rgba(30, 30, 29, 0.71) 0%, rgba(30, 30, 29, 0.71) 100%);
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0;
+            visibility: hidden;
+            transition: 300ms ease;
+        }
+
+        &:hover {
+            span {
+                opacity: 1;
+                visibility: visible;
+            }
+        }
+
+        &:focus {
+            border: none;
+            outline: none;
         }
     }
 
@@ -804,11 +883,18 @@
             height: 30px;
         }
 
+        .swiper-button-next.swiper-button-disabled,
+        .swiper-button-prev.swiper-button-disabled {
+            filter: none;
+            opacity: 0.5;
+        }
+
         @include mobile {
             display: flex;
             justify-content: space-between;
             position: initial;
             margin-top: 10px;
+            width: 100%;
         }
     }
 
