--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -854,14 +854,20 @@
             text-align: center;
             text-shadow: 0px 4px 21px $orange;
         }
+
+        &:hover {
+            svg rect {
+                fill: lighten($color: #282725, $amount: 5);
+            }
+        }
     }
 
-    .swiper-button-next,
+    /* .swiper-button-next,
     .swiper-button-prev {
         &:after {
             display: none;
         }
-    }
+    } */
 
 }
 
