--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -59,6 +59,7 @@
         @include mobile {
             grid-columns: auto;
             grid-row: auto;
+            margin-bottom: 30px;
         }
 
         &_item {
@@ -73,7 +74,7 @@
 
         &_content {
             position: absolute;
-            top: 0;
+            top: 18px;
             width: 100%;
             height: 100%;
             background: linear-gradient(180deg, rgba(0, 0, 0, 0.0) 0%, rgba(28, 27, 25, 0.5) 100%);
@@ -81,7 +82,8 @@
             flex-direction: column;
             justify-content: flex-end;
             gap: 7px;
-            padding-bottom: 20px;
+
+
         }
 
         &_offer {
@@ -91,70 +93,107 @@
             justify-content: space-between;
             gap: 10px;
             border-radius: 4px;
-            padding: 17px;
+            padding: 10px 10px 10px 18px;
             color: white;
-            border: 1px solid #33302D;
-            background: linear-gradient(142deg, #342D27 0%, #222220 67.95%);
+            border: 1.258px solid #33302D;
+            background: linear-gradient(142deg, #342d27 0%, #222220 67.95%);
+            backdrop-filter: blur(9.800000190734863px);
             position: relative;
-            padding-right: 40px;
             transition: 200ms ease;
+            overflow: hidden;
+
+            &::after {
+                position: absolute;
+                right: 0;
+                top: 0;
+                content: "";
+                width: 60%;
+                height: 100%;
+                clip-path: polygon(30% 0, 100% 0, 100% 100%, 0% 100%);
+                background: linear-gradient(92deg, rgba(28, 27, 25, 0.35) -165.58%, rgba(79, 79, 79, 0.12) 3.96%, rgba(79, 79, 79, 0.35) 103.54%);
+            }
 
 
             &_buy {
                 display: flex;
                 align-items: center;
-                gap: 4px;
+                gap: 10px;
+                position: relative;
+                z-index: 1;
             }
 
             &_icon {
-                width: 24px;
+                width: 22px;
             }
 
             &_price {
                 display: flex;
+                flex-direction: column;
                 align-items: flex-end;
                 line-height: 1;
-                gap: 3px;
+                gap: 7px;
+                position: relative;
+                z-index: 1;
             }
 
             &_old {
                 color: $text-dark;
-                font-size: 16px;
-                text-decoration: line-through;
-                font-style: italic;
+                font-size: 10px;
             }
 
             &_new {
                 font-size: 24px;
                 color: white;
                 font-style: italic;
+                font-weight: 700;
             }
 
             &_cur {
                 color: #83AC74;
                 font-size: 13px;
                 position: relative;
-                top: -14px;
+                top: -7px;
                 font-weight: 500;
             }
 
             &_sale {
-                position: absolute;
-                bottom: 3px;
-                right: 3px;
-
-                &_img {
-                    width: 46px;
-                }
+                background-color: #34312D;
+                border: 0.2px solid #4E4A45;
+                display: flex;
+                align-items: center;
+                padding: 5px 15px 5px 7px;
+                border-radius: 15px;
+                position: relative;
 
                 &_text {
-                    position: absolute;
-                    left: 40%;
-                    top: 50%;
-                    transform: translate(-50%, -50%);
                     color: #D3BA77;
                     font-size: 9px;
+                    font-weight: 500;
                 }
+
+                &::after {
+                    content: "";
+                    width: 7px;
+                    height: 7px;
+                    border-radius: 50%;
+                    background: linear-gradient(92deg, rgba(28, 27, 25, 0.35) -165.58%, rgba(79, 79, 79, 0.12) 3.96%, rgba(79, 79, 79, 0.35) 103.54%);
+                    border: 0.2px solid #4E4A45;
+                    position: absolute;
+                    right: 3px;
+                    top: 50%;
+                    transform: translateY(-50%);
+                }
+            }
+
+            &_wrap {
+                display: flex;
+                align-items: center;
+            }
+
+            &_wrap2 {
+                display: flex;
+                align-items: center;
+                gap: 5px
             }
 
             &:hover {
@@ -167,20 +206,60 @@
         }
 
         &_buynow {
+            width: 100%;
             font-size: 12px;
             color: white;
-            margin: 0 10px;
             display: flex;
             justify-content: center;
-            padding: 5px;
-            border-radius: 4px;
+            align-items: center;
+            padding: 7px 20px;
+            border-radius: 18px;
             background: linear-gradient(180deg, rgba(68, 160, 105, 0.62) 0%, rgba(137, 255, 18, 0.36) 100%);
             backdrop-filter: blur(5.699999809265137px);
             transition: 200ms ease;
+            border: 1px solid rgba(68, 160, 105, 0.62);
 
             &:hover {
-                background: linear-gradient(180deg, rgba(67, 255, 142, 0.62) 0%, rgba(174, 255, 94, 0.36) 100%);
+                color: #ACF57C;
+                border: 1px solid #ACF57C;
+                background: linear-gradient(180deg, rgba(68, 160, 105, 0.62) 0%, rgba(137, 255, 18, 0.36) 100%);
+                box-shadow: 0px 0px 7.5px 0px #5F9C2C;
+                backdrop-filter: blur(5.699999809265137px);
             }
+        }
+
+        &_steam {
+            padding: 7px 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            gap: 5px;
+            width: 100%;
+            font-size: 12px;
+            border-radius: 18px;
+            border: 1px solid #2C465E;
+            background: #20294E;
+            box-shadow: 0px 4px 28.9px 0px rgba(13, 25, 35, 0.69);
+            backdrop-filter: blur(33.650001525878906px);
+
+            &:hover {
+                color: #9DB1FF;
+                border: 1px solid #456BFF;
+                background: linear-gradient(180deg, #162A7C 0%, #343E68 100%);
+                box-shadow: 0px 0px 7.5px 0px #456BFF;
+                backdrop-filter: blur(5.699999809265137px);
+
+                svg path {
+                    fill: #9DB1FF;
+                }
+            }
+        }
+
+        &_btns {
+            display: flex;
+            gap: 10px;
+            margin: 0 10px;
         }
     }
 
@@ -437,6 +516,7 @@
         border: 1px solid #34312D;
         background: rgba(26, 25, 23, 0.65);
         backdrop-filter: blur(4.25px);
+        transition: 300ms ease;
 
         &:hover {
             border-color: $orange;
@@ -480,10 +560,22 @@
         color: $text-dark;
     }
 
+    .container {
+        @include mobile {
+            padding: 0 10px;
+        }
+    }
+
     .cart-item__img_offer,
-    .cart-item__img_buynow {
+    .cart-item__img_buynow,
+    .cart-item__img_btns {
         margin: 0;
     }
+
+    .cart-item__img_offer {
+        padding: 5px 10px;
+    }
+
 }
 
 .cart-table {
@@ -993,7 +1085,17 @@
         gap: 30px;
     }
 
-    &__tabs {}
+    &__tabs {
+        width: 100%;
+        display: flex;
+        gap: 5px;
+
+        @include mobile {
+            justify-content: center;
+
+            gap: 5px;
+        }
+    }
 
     &__help {
         display: flex;
@@ -1001,6 +1103,8 @@
         gap: 18px;
         position: relative;
         z-index: 2;
+        width: 100%;
+        justify-content: flex-end;
 
         @include mobile {
             margin-left: auto;
@@ -1053,6 +1157,7 @@
         display: flex;
         flex-direction: column;
         gap: 5px;
+        width: 100%;
     }
 
     &__form {
@@ -1149,6 +1254,7 @@
 
         @include mobile {
             justify-content: center;
+            flex-direction: column;
         }
 
         &_btn {
@@ -1169,6 +1275,10 @@
             display: flex;
             width: 100%;
             gap: 15px;
+
+            @include mobile {
+                justify-content: center;
+            }
         }
 
         &_category {
@@ -1176,6 +1286,11 @@
             justify-content: flex-end;
             width: 100%;
             gap: 10px;
+
+            @include mobile {
+                justify-content: center;
+                flex-direction: column;
+            }
         }
     }
 
