--- a/src/assets/scss/pages/_steam.scss
+++ b/src/assets/scss/pages/_steam.scss
@@ -110,3 +110,325 @@
         font-size: 12px;
     }
 }
+
+
+
+.steam-actions {
+    padding: 40px 0;
+
+    &__block {
+        display: grid;
+        grid-template-columns: 49% 49%;
+        grid-template-rows: auto auto;
+        gap: 2%;
+        grid-template-areas:
+            "bonus advantages"
+            "bonus discount"
+    }
+}
+
+.steam-advantages {
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    grid-area: advantages;
+
+    &__card {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        border-radius: 4px;
+        background: #282725;
+        padding: 5px;
+        gap: 8px;
+
+        &:hover {
+            .steam-advantages__title {
+                color: #D6B13A;
+            }
+
+            .steam-advantages__img {
+                filter: none;
+                transform: scale(1);
+            }
+        }
+    }
+
+    &__img {
+        width: auto;
+        height: 60px;
+        object-fit: contain;
+        object-position: center;
+        transition: 300ms ease;
+        transform: scale(0.9);
+        filter: grayscale(1) brightness(0.4) contrast(1.5);
+    }
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    &__title {
+        font-size: 20px;
+        font-weight: 600;
+        color: white;
+        transition: 300ms ease;
+        line-height: 1;
+    }
+
+    &__text {
+        color: white;
+        font-size: 11px;
+        font-weight: 400;
+        line-height: 1.1;
+    }
+}
+
+.steam-discount {
+    height: 100%;
+    padding: 20px 10px 0;
+    border-radius: 10px;
+    background: #191917;
+    box-shadow: 0px -31px 42.6px -26px rgba(0, 0, 0, 0.25);
+
+    &__border {
+        width: 100%;
+        height: 100%;
+        border: 1px solid transparent;
+        background: linear-gradient(180deg, #1A1917 0%, #262724 100%) padding-box, linear-gradient(to bottom, #ffffff00 4%, #7B3DFF) border-box;
+        position: relative;
+        border-radius: 10px;
+        grid-area: discount;
+    }
+
+    &__block {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    &__prices {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+    }
+
+    &__price {
+        visibility: hidden;
+        opacity: 0;
+        font-size: 14px;
+        font-weight: 500;
+        padding: 5px 10px;
+        color: #BE9FFF;
+        border-radius: 22.5px;
+        border: 1.258px solid #33302D;
+        background: linear-gradient(142deg, rgba(52, 45, 39, 0.71) 0%, rgba(34, 34, 32, 0.71) 67.95%);
+        backdrop-filter: blur(6.349999904632568px);
+        transition: 400ms ease;
+
+        &._active {
+            visibility: visible;
+            opacity: 1;
+        }
+    }
+
+    &__line {
+        margin-top: 20px;
+        border-radius: 3.5px;
+        background: #282725;
+        width: 100%;
+        height: 7px;
+        position: relative;
+        display: flex;
+        justify-content: space-around;
+
+        &_color {
+            top: 0;
+            left: 0;
+            position: absolute;
+            width: auto;
+            height: 100%;
+            border-radius: 3.5px;
+            background: linear-gradient(90deg, #7B3DFF 84.07%, rgba(123, 61, 255, 0.00) 100%);
+            transition: width 300ms ease-in-out;
+        }
+    }
+
+    &__btns {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+        position: relative;
+        bottom: -15px;
+    }
+
+    &__btn {
+        border-radius: 25px;
+        border: 1px solid #BE9FFF;
+        background: #191917;
+        padding: 5px 20px;
+        color: white;
+        font-size: 12px;
+        font-weight: 500;
+        transition: 300ms ease;
+
+        &:hover {
+            border: 1px solid #7B3DFF;
+        }
+
+        &._active,
+        &:focus {
+            border: 1px solid #7B3DFF;
+        }
+    }
+
+    &__dot {
+        background: #3E3C39;
+        width: 14px;
+        height: 18px;
+        border-radius: 50%;
+        position: relative;
+        top: -6px;
+        border: 3px solid transparent;
+        transition: 300ms ease;
+
+        &:focus {
+            border: 3px solid transparent;
+            outline: none;
+        }
+
+        &._active {
+            background-color: #7B3DFF;
+            border: 3px solid #191917;
+        }
+    }
+}
+
+.steam-bonus {
+    grid-area: bonus;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+
+    &__title {
+        height: auto;
+        display: flex;
+        align-items: center;
+
+
+        &_bonus {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            font-size: 16px;
+            font-weight: 700;
+            color: #D6B13A;
+            padding: 8px 15px;
+            border-radius: 22.5px;
+            border: 1.258px solid #33302D;
+            background: linear-gradient(142deg, #342D27 0%, #222220 67.95%);
+        }
+
+        &_crystal {
+            height: 28px;
+            object-fit: contain;
+        }
+
+        &_crystal {}
+    }
+
+    &__slider {
+        display: flex;
+        width: 100%;
+        padding: 20px 10px 0;
+        border-radius: 10px;
+        background: #191917;
+        box-shadow: 0px -31px 42.6px -26px rgba(0, 0, 0, 0.25);
+    }
+
+    &__border {
+        width: 100%;
+        height: 50%;
+        border: 1px solid transparent;
+        background: linear-gradient(180deg, #1A1917 0%, #262724 100%) padding-box, linear-gradient(to bottom, #ffffff00 4%, #D6B13A) border-box;
+        position: relative;
+        border-radius: 10px;
+        display: flex;
+    }
+
+    &__card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+
+    &__img {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+
+        &_item {
+            height: 80px;
+            object-fit: contain;
+            filter: grayscale(1) brightness(0.3) contrast(1.3);
+        }
+    }
+
+    &__open {
+        position: absolute;
+        bottom: 5px;
+        left: 50%;
+        transform: translateX(-50%);
+        line-height: 1;
+        padding: 6px 12px;
+        color: #D6B13A;
+        border-radius: 22.5px;
+        border: 1.2px solid #33302D;
+        background: linear-gradient(142deg, rgba(52, 45, 39, 0.71) 0%, rgba(34, 34, 32, 0.71) 67.95%);
+        backdrop-filter: blur(6.349999904632568px);
+    }
+
+    &__dot {
+        border-radius: 50%;
+        border: 3px solid #191917;
+        background: #D6B13A;
+        width: 16px;
+        height: 16px;
+    }
+
+    &__info {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 4px;
+        border-radius: 15px;
+        border: 1px solid #FF7347;
+        background: #191917;
+        font-size: 12px;
+        font-weight: 500;
+        color: white;
+        line-height: 1;
+        padding: 5px 10px;
+    }
+
+    &__crystal {
+        width: 13px;
+        height: 13px;
+        object-fit: contain;
+    }
+
+    .swiper-wrapper {
+        height: auto;
+    }
+
+    .swiper-slide {
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+    }
+}
