--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -1469,3 +1469,106 @@
         }
     }
 }
+
+.steam-card {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+
+    &__img {
+        height: 110px;
+        overflow: hidden;
+        position: relative;
+        border-radius: 5px;
+        background: linear-gradient(180deg, rgba(28, 27, 25, 0.00) 0%, #232220 91.48%);
+
+        &_item {
+            object-fit: cover;
+            position: relative;
+            z-index: -1;
+        }
+    }
+
+    &__title {
+        font-size: 20px;
+        font-family: $font-roboto;
+        font-weight: 600;
+        line-height: 1.2;
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+    }
+
+    &__discount {
+        position: absolute;
+        bottom: 10px;
+        right: 50px;
+        border-radius: 3px;
+        background: $orange;
+        line-height: 1;
+        padding: 3px 6px;
+        font-size: 12px;
+        font-weight: 500;
+    }
+
+    &__new {
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        font-size: 12px;
+        font-weight: 500;
+        border-radius: 3px;
+        background: #377E94;
+        padding: 3px 6px;
+        line-height: 1;
+    }
+
+    &__actions {
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
+        border-radius: 5px;
+        background: linear-gradient(117deg, #23221F 54.83%, #2B2624 102.44%);
+        box-shadow: 0px 12px 12.6px -7px rgba(0, 0, 0, 0.25);
+        padding: 11px 13px;
+
+        &_btns {
+            display: flex;
+            gap: 6px;
+        }
+
+        &_price {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    &__price {
+        font-size: 20px;
+        font-weight: 700;
+        font-family: $font-roboto;
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        line-height: 1;
+    }
+
+    &__subprice {
+        font-size: 12px;
+        color: $text-dark;
+        line-height: 1;
+        text-decoration: line-through;
+    }
+
+    &__add, &__favourite {
+        padding: 6px 10px;
+        border-radius: 3px;
+        background: linear-gradient(45deg, #2F2D29 0%, #2B2624 100%);
+
+        &:hover {
+            svg path {
+                fill: $orange;
+            }
+        }
+    }
+}
