--- a/src/assets/scss/_classes.scss
+++ b/src/assets/scss/_classes.scss
@@ -1471,6 +1471,7 @@
 }
 
 .steam-card {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 7px;
@@ -1560,7 +1561,8 @@
         text-decoration: line-through;
     }
 
-    &__add, &__favourite {
+    &__add,
+    &__favourite {
         padding: 6px 10px;
         border-radius: 3px;
         background: linear-gradient(45deg, #2F2D29 0%, #2B2624 100%);
